--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,16 +1,9 @@
-<nav class="transparent z-depth-0">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo right">Logo</a>
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
-  </nav>
 <div class="row">
   <div class="col l12">
-    <h1><i class="large material-icons">code</i></h1>
-
+    <h1 class="right-align">
+      <i class="large material-icons valign-wrapper">
+        <a href="#">code</a>
+      </i>
+    </h1>
   </div>
 </div>
