--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-  <%= yield %>
-</body>
+  <header>
+    <%= render "header"%>
+  </header>
+
+  <main>
+    <%= yield %>
+  </main>
 </html>
