--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,13 @@
-<div class="row">
-  <div class="col l12">
-    <h1 class="right-align">
-      <i class="large material-icons valign-wrapper">
-        <a href="#">code</a>
-      </i>
-    </h1>
+<div class="row" id ="center-horizontal">
+  <div class="col s3">
+    <!--filler -->
+  </div>
+  <div class="input-field col s6 z-depth-5">
+    <i class="material-icons prefix">search</i>
+    <input id="icon_prefix" type="text" class="validate">
+    <label for="icon_prefix">Search</label>
+  </div>
+  <div class="col s3">
+    <!-- filler -->
   </div>
 </div>
