other rails generated files

--- a/app/views/dashboard/_header.html.erb
+++ b/app/views/dashboard/_header.html.erb
@@ -9,7 +9,7 @@
       <i class="large material-icons">code</i>
     </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Login</a></li>
+      <li><%= link_to 'Login', login_path %></li>
     </ul>
   </div>
 </nav>
