--- a/app/views/dashboard/_header.html.erb
+++ b/app/views/dashboard/_header.html.erb
@@ -9,7 +9,13 @@
       <i class="large material-icons">code</i>
     </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><%= link_to 'Login', login_path %></li>
+      <li>
+        <% if current_user %>
+          <%= link_to 'Logout', logout_path %>
+        <% else %>
+          <%= link_to 'Login', login_path %>
+        <% end %>
+      </li>
     </ul>
   </div>
 </nav>
