--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,11 +2,13 @@
   <div class="col s3">
     <!--filler -->
   </div>
-  <div class="input-field col s6 z-depth-5">
-    <i class="material-icons prefix">search</i>
-    <input id="icon_prefix" type="text" class="validate">
-    <label for="icon_prefix">Search</label>
-  </div>
+    <% if current_user %>
+      <div class="input-field col s6 z-depth-5">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Search</label>
+      </div>
+    <% end %>
   <div class="col s3">
     <!-- filler -->
   </div>
