more style added throughout.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,21 +1,6 @@
 @import "materialize/components/color";
-$primary-color: color("teal", "accent-1") !default;
+$primary-color: color("lime", "lighten-1") !default;
 @import 'materialize';
 @import 'background-image';
 @import 'header';
-
-#center-horizontal{
-  margin-top: 150px;
-}
-
-.s6, .s3{
-  height: 250px;
-}
-
-.s6 {
-  opacity: 0.8;
-  background-color: white;
-  i,input, label {
-    margin-top: 30px;
-  }
-}
+@import 'dashboard';
