added images to the /assets/images

--- a/app/assets/stylesheets/background-image.scss
+++ b/app/assets/stylesheets/background-image.scss
@@ -3,7 +3,8 @@ body {
 // https://s3.amazonaws.com/mashy-app/2015-03-Life-of-Pix-free-stock-photos-Cloud-plane-trip-dream-blue-Sarah-Babineau.jpg
 // https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
 // https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-particles-abstract-texture-grzegorzmleczev.jpeg
-  background: url("https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg") no-repeat center center fixed;
+// https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
+  background: url("/assets/grass.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
