--- a/app/views/dashboard/_header.html.erb
+++ b/app/views/dashboard/_header.html.erb
@@ -13,7 +13,7 @@
         <% if current_user %>
           <%= link_to 'Logout', logout_path %>
         <% else %>
-          <%= link_to 'Login', login_path %>
+          <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
         <% end %>
       </li>
     </ul>
