change top fit SASS convention

--- a/app/assets/stylesheets/background-image.scss
+++ b/app/assets/stylesheets/background-image.scss
@@ -4,7 +4,7 @@ body {
 // https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
 // https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-particles-abstract-texture-grzegorzmleczev.jpeg
 // https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
-  background: url("/assets/grass.jpg") no-repeat center center fixed;
+  background: image-url("grass.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
