many other hanges

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,7 @@ $primary-color: color("lime", "lighten-1") !default;
 @import 'background-image';
 @import 'header';
 @import 'dashboard';
+
+.collection-item{
+  border: 1px orage solid;
+}
