--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@
       <div class="input-field col l6 s10 z-depth-5 center">
         <input id="icon_prefix" type="text" class="validate" placeholder="Search for a Startup..."><br/>
         <a class="btn-floating btn-small waves-effect waves-light red z-depth-2"><i class="material-icons">search</i></a>
-        <%= current_user%>
+        <%= @spotify_service.find_playlists %>
       </div>
     <% end %>
   <div class="col l3 s1">
