fixed the main view on dashboard#index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,6 @@ $primary-color: color("lime", "lighten-1") !default;
 @import 'header';
 @import 'dashboard';
 
-.collection-item{
-  border: 1px orage solid;
+h1,h2, h3, h4, h5, h6 {
+  font-weight: 300;
 }
