--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -7,10 +7,13 @@
   </div>
 
   <div class="col l6 s10 z-depth-5 center">
-    <%=  %>
-    <% @spotify_service.find_users_playlists.each do |playlist| %>
-      <%= link_to "show", playlist_path(playlist.id) %>
-    <% end %>
+    <ul class="collection with-header">
+      <% @spotify_service.find_users_playlists.each do |playlist| %>
+      <li class="collection-item">
+        <%= link_to "#{playlist.name}", playlist_path(playlist.id) %>
+      </li>
+      <% end %>
+    </ul>
   </div>
 
   <div class="col l3 s1">
