--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -2,8 +2,7 @@
   <div class="nav-wrapper">
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><a href="sass.html">Mashy</a></li>
-      <!-- <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li> -->
+      <li><a href="collapsible.html">JavaScript</a></li>
     </ul>
     <a href="#" class="brand-logo left">
       <i class="large material-icons">code</i>
