slight re-factor of playlists_controller.rb

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,3 +1,5 @@
-<% @pl.tracks.each do |track| %>
-  <%= track.name %>
-<%end %>
+<ul>
+  <% @playlist.tracks.each do |track| %>
+    <li><%= track.name %></li>
+  <%end %>
+</ul>
