--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,36 @@
 @import "materialize/components/color";
-$primary-color: color("lime", "lighten-1") !default;
+$primary-color: color("blue-grey", "darken-4") !default;
+
+$spotify-green: #82b919;
+$spotify-black: #000000;
+$spotify-dark-grey: #262626;
+$spotify-grey: #999999;
+$spotify-white: #ffffff;
+$spotify-orange: #ff6000;
+$spotify-red: #f25555;
+$spotify-yellow: #ebd411;
+
+
 @import 'materialize';
+@import 'background-image';
+@import "header";
 
 h1,h2, h3, h4, h5, h6 {
   font-weight: 300;
+  color: $spotify-dark-grey;
+}
+
+html, body{
+  height: 100%;
+}
+
+.alpha60 {
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgb(0, 0, 0);
+    /* RGBa with 0.6 opacity */
+    background: rgba(0, 0, 0, 0.6);
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }
