--- a/app/assets/stylesheets/background-image.scss
+++ b/app/assets/stylesheets/background-image.scss
@@ -1,17 +1,15 @@
-body {
-// background: url("https://s3.amazonaws.com/mashy-app/photo-1443527216320-7e744084f5a7.jpeg") no-repeat center center fixed;
-// https://s3.amazonaws.com/mashy-app/2015-03-Life-of-Pix-free-stock-photos-Cloud-plane-trip-dream-blue-Sarah-Babineau.jpg
-// https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
-// https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-particles-abstract-texture-grzegorzmleczev.jpeg
-// https://s3.amazonaws.com/mashy-app/2015-11-Life-of-Pix-free-stock-photos-grass-macro-drops-grzegorzmleczev.jpeg
-  background: image-url("grass.jpg") no-repeat center center fixed;
+.welcome-background {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  background: image-url("headphones.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
-body:before {
+.welcome-background:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -20,5 +18,4 @@ body:before {
   top: 0;
   left: 0;
   background: -webkit-radial-gradient(top center, ellipse cover, rgba(50,50,50,0.8) 0%,rgba(50,50,50,0.2) 100%);
-
 }
