--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,17 +1,11 @@
-
-i.large.material-icons {
-  opacity: 0.7;
+.nav-wrapper{
+  padding-left: 70px;
+  a{
+    color:$spotify-green;
+  }
 }
 
-.nav-wrapper{
-  padding: 30px 50px;
-  a{
-    color:$primary-color;
-  }
-  li:hover{
-    background-color: rgba(255,255,255,0.0);
-  }
-  a:hover{
-    color: rgba(255,255,255,0.9);
-  }
+.login-button {
+  margin-top: 200px;
+  margin-right: 120px;
 }
