main style has now been laid out

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,9 @@
   <div class="nav-wrapper alpha60">
     <a href = "/" class="brand-logo">Mashy</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html"></a></li>
+      <% if current_user %>
+        <li id="logout"> <%= link_to "Logout", logout_path%> </li>
+      <% end %>
     </ul>
   </div>
 </nav>
