--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -7,4 +7,21 @@
       Logged in as:  <%= current_user.name %>
     </div>
   </div>
+  <div class="row">
+
+    <div class="col m9 s12">
+      <ul class="collection">
+        <% current_user.playlists.each do |playlist|%>
+        <li class="collection-item avatar">
+          <img src="images/yuna.jpg" alt="" class="circle">
+          <span class="title"> <%= playlist.name.titleize %> </span>
+          <p> <%= playlist.owner %> <br>
+             external playlist
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+        </li>
+        <% end  %>
+      </ul>
+    </div>
+  </div>
 </body>
