--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,7 @@ nav {
   margin-bottom: 20px;
 }
 
+
 .collection{
   border: $spotify-grey;
   color: white;
@@ -57,5 +58,12 @@ nav {
     .title {
       color: $spotify-green;
     }
+  }
+}
+
+.dropdown-content {
+  background-color: $spotify-black;
+  li > a{
+    color: $spotify-green;
   }
 }
