small change to make img work on prod

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
     <%= render "layouts/navbar" %>
     <div class="row">
       <div class="col l3 right login-button">
-        <a href="/auth/spotify"><img src="assets/log_in-desktop-large.png"/></a>
+        <a href="/auth/spotify"><%= image_tag("log_in-desktop-large.png")%></a>
       </div>
     </div>
   </div>
