--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -9,13 +9,18 @@
   </div>
 
   <div class="row center">
+    <%= react_component "PlaylistCollection" %>
+
+
+
+
     <!-- Dropdown Trigger -->
-    <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Playlists</a>
+    <!-- <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Playlists</a> -->
     <!-- Dropdown Structure -->
-    <ul id='dropdown1' class='dropdown-content'>
+    <!-- <ul id='dropdown1' class='dropdown-content'>
       <% current_user.playlists.each do |playlist| %>
         <li><a href="#!"><%=playlist.name.titleize%></a></li>
       <% end %>
-    </ul>
+    <!-- </ul> -->
   </div>
 </body>
