React on the front end

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -8,19 +8,7 @@
     </div>
   </div>
 
-  <div class="row center">
+  <div class="row left">
     <%= react_component "PlaylistCollection" %>
-
-
-
-
-    <!-- Dropdown Trigger -->
-    <!-- <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Playlists</a> -->
-    <!-- Dropdown Structure -->
-    <!-- <ul id='dropdown1' class='dropdown-content'>
-      <% current_user.playlists.each do |playlist| %>
-        <li><a href="#!"><%=playlist.name.titleize%></a></li>
-      <% end %>
-    <!-- </ul> -->
   </div>
 </body>
