echonest-API is now wired up

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -10,5 +10,6 @@
 
   <div class="row left">
     <%= react_component "PlaylistCollection" %>
+    <%= @sc.get_song_analysis("beatles", "hey jude") %>
   </div>
 </body>
