added c3 and it interupted react dependencies.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@ $spotify-yellow: #ebd411;
 @import 'materialize';
 @import 'background-image';
 @import "navbar";
+@import "c3";
 
 h1,h2, h3, h4, h5, h6, p,  .text-white {
   font-weight: 300;
