--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -11,4 +11,19 @@
   <div class="row left">
     <%= react_component "PlaylistCollection" %>
   </div>
+    <div id="chart">
+
+    </div>
+    <script type="text/javascript">
+      var chart = c3.generate({
+          bindto: '#chart',
+          data: {
+            columns: [
+              ['data1', 30, 200, 100, 400, 150, 250],
+              ['data2', 50, 20, 10, 40, 15, 25]
+            ]
+          }
+      });
+
+    </script>
 </body>
