lets try to push to heroku again.

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -8,9 +8,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col m6 left">
+    <div class="center">
       <%= react_component "PlaylistCollection" %>
     </div>
-    <div id="chart" class="col m6"></div>
   </div>
 </body>
